--- a/README.Rmd
+++ b/README.Rmd
@@ -42,11 +42,10 @@ Run a basic example with the provided data:
 
 ```{r example, message=FALSE, warning=FALSE}
 library(genestdwp)
-library(units)
 library(sf)
 library(tidyverse)
 # Vector of distances
-dist = set_units(c(10, 20, 30, 40, 50), m)
+dist = c(10, 20, 30, 40, 50) # assumming meters
 # Spatial join among visibility map and rings
 rings <- viring(x=visib, d = dist)
 # Carcasses
