--- a/README.Rmd
+++ b/README.Rmd
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(
 
 # GenestDwp 
 
-The goal of genestdwp is to obtain the dwp (density weighted proportion) file required to run GenEst. It will require shapefiles for visibility map around each turbine and the carcass locations. Both layers will tipically be obtained from  GIS.
+The goal of genestdwp is to obtain the dwp (density weighted proportion) file required to run GenEst. It will work with the shapefiles for visibility map around each turbine and the carcass locations. Both layers will tipically be obtained from  GIS.
 
 ## Disclaimer
 This software is preliminary or provisional. No warranty, expressed or implied, is made by the mantainer. Software releases constitute no warranty. The software is provided as is on the condition that the mantainer shall not be held liable or responsible for any damages resulting from the authorized or unauthorized use of the software.
@@ -33,7 +33,7 @@ library(devtools)
 install_github("PauloEduardoCardoso/genestdwp")
 ```
 ## Contribute
-You are welcome to contribute to the package development and improvment by [filling an issue](https://github.com/PauloEduardoCardoso/genestdwp/issues) at the software webpage.
+You are welcome to contribute to the package development and improvment by [filling an issue](https://github.com/PauloEduardoCardoso/genestdwp/issues) at the package webpage.
 
 ## Example
 
