--- a/vignettes/my-vignette.Rmd
+++ b/vignettes/my-vignette.Rmd
@@ -16,3 +16,26 @@ knitr::opts_chunk$set(
 
 The density-weighted proportion (DWP) is the expected fraction of carcasses that fell in the searched area. Carcass density is not the same at all distances from a turbine, but typically rises over a short distance then decreases eventually to zero [GenEst](https://cran.r-project.org/web/packages/GenEst/vignettes/wind-examples.html).
 
+Run a basic example with the provided data:
+
+```{r example, message=FALSE, warning=FALSE}
+library(genestdwp)
+library(sf)
+library(tidyverse)
+# Vector of distances
+dist = c(10, 20, 30, 40, 50) # assumming distance in meters
+# Spatial join among visibility map and rings
+rings <- viring(x=visib, d = dist)
+# Carcasses
+pto_carcass
+# Get DWP
+df <- dwp(vr = rings, pt = pto_carcass)
+df
+# Plot some data together
+ggplot() +
+  geom_sf(aes(fill = factor(dist)), colour = 'grey80',
+          size = .1, data = filter(rings, ag == 1)) +
+  geom_sf(data = filter(pto_carcass, ag == 1), size = 4) +
+  scale_fill_brewer('Dist (m)') +
+  theme_void()
+```
