--- a/vignettes/my-vignette.Rmd
+++ b/vignettes/my-vignette.Rmd
@@ -18,10 +18,10 @@ The density-weighted proportion (DWP) is the expected fraction of carcasses that
 
 Run a basic example with the provided data:
 
-```{r example, message=FALSE, warning=FALSE}
-library(genestdwp)
-library(sf)
+```{r, message=FALSE, warning=FALSE}
 library(tidyverse)
+library(sf)
+library(genestdwp)
 # Vector of distances
 dist = c(10, 20, 30, 40, 50) # assumming distance in meters
 # Spatial join among visibility map and rings
@@ -36,6 +36,6 @@ ggplot() +
   geom_sf(aes(fill = factor(dist)), colour = 'grey80',
           size = .1, data = filter(rings, ag == 1)) +
   geom_sf(data = filter(pto_carcass, ag == 1), size = 4) +
-  scale_fill_brewer('Dist (m)') +
+  scale_fill_brewer('Distance (m)') +
   theme_void()
 ```
