--- a/README.Rmd
+++ b/README.Rmd
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-> GenestDwp helps to obtain the dwp (density weighted proportion) file required to run GenEst. It will work with the shapefiles for visibility map around each turbine and the carcass locations. Both layers will tipically be obtained from  GIS.
+> GenestDwp helps to obtain the dwp (density weighted proportion) file required to run GenEst. It will work with the shapefiles for visibility map around each turbine and the carcass locations. Both layers will tipically be obtained from  GIS. Visit the [package website](https://pecard.github.io/genestdwp/index.html) 
 
 ## Disclaimer
 This software is preliminary or provisional. No warranty, expressed or implied, is made by the mantainer. Software releases constitute no warranty. The software is provided as is on the condition that the mantainer shall not be held liable or responsible for any damages resulting from the authorized or unauthorized use of the software.
@@ -23,17 +23,16 @@ This software is preliminary or provisional. No warranty, expressed or implied, 
 GenEst is a generalized, unbiased, fatality estimator developed by [USGS](https://www.usgs.gov/software/genest-a-generalized-estimator-mortality). Additional information and details available from the [software User Guide](https://doi.org/10.3133/tm7C19), the [package repository ](https://doi.org/10.5066/P9O9BATL), and the [technical report](https://doi.org/10.3133/tm7A2). The material from a USGS "Into to GenEst" workshop is also available  [here](https://www.usgs.gov/media/files/intro-genest-workshop-nwcc-26nov2018).
 
 ## Installation
-You can install the released version of genestdwp from [Github](https:://github.com/PauloEduardoCardoso/genestdwp) with:
+You can install the released version of genestdwp from [Github](https:://github.com/pecard/genestdwp) with:
 
 ``` r
 library(devtools)
-install_github("PauloEduardoCardoso/genestdwp")
+install_github("pecard/genestdwp")
 ```
 ## Contribute
-You are welcome to contribute to the package development and improvment by [filling an issue](https://github.com/PauloEduardoCardoso/genestdwp/issues) at the package webpage.
+You are welcome to contribute to the package development and improvment by [filling an issue](https://github.com/pecard/genestdwp/issues) at the package webpage.
 
-## Example
-
+## Usage
 Run a basic example with the provided data:
 
 ```{r example, message=FALSE, warning=FALSE}
